add calender.jsx and makeDate.jsx and showData.jsx

--- a/src/common/styles.css
+++ b/src/common/styles.css
@@ -2,3 +2,6 @@
 @value mainColor #00AB9F;
 @value borderColor  rgb(224, 224, 224);
 @value btnColor rgb(89, 130, 255);
+@value pColor #5d5d5d;
+@value subColor #c5d632;
+@value font_white #f7f7f7;
