--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,9 @@
   box-sizing: border-box;
   font-family: "Noto Sans KR", sans-serif;
 }
+input {
+  outline: none;
+}
+li {
+  list-style: none;
+}
