--- a/src/component/makeDate/makeDate.module.css
+++ b/src/component/makeDate/makeDate.module.css
@@ -1,11 +1,14 @@
 .date {
   width: 14.2857%;
-  margin: 1rem 0;
+  margin: 0.7rem 0;
   text-align: center;
 }
 
 .title {
   cursor: pointer;
+  display: block;
+  text-decoration: none;
+  color: black;
 }
 .cal {
   font-size: 0.6rem;
