--- a/src/component/login/login.module.css
+++ b/src/component/login/login.module.css
@@ -1,4 +1,4 @@
-@value loginWidth,mainColor,borderColor,subColor from "../../common/styles.css";
+@value pColor,loginWidth,mainColor,borderColor,subColor from "../../common/styles.css";
 
 .container {
   height: 100vh;
@@ -40,4 +40,18 @@
   padding: 0 3rem;
   padding-top: 0.8rem;
   border-top: 1px solid borderColor;
+}
+.btn {
+  padding: 0.4rem 0;
+  margin-bottom: 0.8rem;
+  background-color: rgb(240, 240, 240);
+  border: none;
+  cursor: pointer;
+  outline: none;
+  transition: 0.3s;
+  color: pColor;
+}
+
+.btn:hover {
+  background-color: rgb(200, 200, 255);
 }
