--- a/src/component/header/header.module.css
+++ b/src/component/header/header.module.css
@@ -1,15 +1,19 @@
 @value mainColor,subColor,font_white from "../../common/styles.css";
 
 .logo {
-  padding: 0.5rem 0;
+  padding: 0.7rem 0;
   text-align: center;
   background-color: subColor;
   color: font_white;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .logo svg {
   padding-right: 0.2rem;
   color: font_white;
+  font-size: 1.3rem;
 }
 
 .singOutBtn {
@@ -22,4 +26,9 @@
   font-size: 0.8rem;
   cursor: pointer;
   outline: none;
+}
+
+.logo span {
+  font-size: 1.3rem;
+  letter-spacing: 0.1rem;
 }
