--- a/src/component/showDate/showDate.module.css
+++ b/src/component/showDate/showDate.module.css
@@ -1,9 +1,11 @@
 .container {
-  flex: 1 1 60%;
+  flex: 1 1 75%;
   padding: 1rem;
 }
 .title {
   text-align: center;
+  padding: 0.7rem;
+  font-size: 1.1rem;
 }
 
 .dayContainer {
