--- a/src/component/home/home.module.css
+++ b/src/component/home/home.module.css
@@ -19,17 +19,11 @@
 .box input {
   outline: none;
 }
-.sign {
-  color: rgb(145, 144, 144);
-  font-size: 0.7rem;
-}
-.itemContainer {
+
+.itemForm div {
   padding-bottom: 0.5rem;
 }
-.conference {
-  color: rgb(145, 144, 144);
-  font-size: 0.7rem;
-}
+
 .btn {
   padding: 0.4rem;
   cursor: pointer;
