--- a/src/component/header/header.module.css
+++ b/src/component/header/header.module.css
@@ -27,6 +27,10 @@
   cursor: pointer;
   outline: none;
 }
+.signOutLink {
+  color: font_white;
+  text-decoration: none;
+}
 
 .logo span {
   font-size: 1.3rem;
